tests/pact/bad/bad-repl-native.repl
(begin-tx)
(module bad-repl-native G
  (defcap G () true)
  (defun f () (env-sigs [{'key: "bob",'caps: []}])))
(commit-tx)
(bad-repl-native.f)
